hphp/hack/test/typecheck/array/safe_vector_array/varray_with_array_map_does_not_return_dict_like_array.php.like_types.exp
File "varray_with_array_map_does_not_return_dict_like_array.php", line 4, characters 10-52:
Invalid return type (Typing[4110])
File "varray_with_array_map_does_not_return_dict_like_array.php", line 3, characters 35-49:
Expected darray<int, int>
File "stdlib/builtins_array.hhi", line 118, characters 10-18:
But got varray<[unresolved]>
